# recodingv2

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
backend/: Cargo.toml
backend/src/api/auth/: mod.rs  service.rs
backend/src/api/base/: handler.rs
backend/src/shared/: mod.rs
backend/src/shared/config/: cors.rs
backend/src/shared/middleware/: temp_file.rs
backend/src/shared/models/: mod.rs  temp_file.rs  users.rs
backend/src/shared/utils/: temp_file.rs
database/entity/: Cargo.toml  README.md
database/entity/src/: audit_log.rs  autosave_history.rs  edit_events.rs  exercise_assignments.rs  exercises.rs  feedback.rs  focus_events.rs  lib.rs  paste_events.rs  prelude.rs  questions.rs  schema_migrations.rs  sessions.rs  submissions.rs  users.rs
database/migration/: Cargo.toml  README.md
database/migration/src/: lib.rs  m20260620_152855_users.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
src/: main.rs
src/api/: mod.rs
src/api/auth/: dto.rs  handler.rs  routes.rs
src/api/base/: handler.rs  routes.rs
src/shared/config/: cors.rs  logger.rs  mod.rs  temp_file.rs
src/shared/errors/: temp_file.rs
