[package]
name = "recodingv2_API"
version = "0.1.0"
description = "A controlled environment for running timed coding and writing exercises with live anti-cheat monitoring."
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
dotenvy = "0.15.7"
env_logger = "0.11.10"
sea-orm = "1.1.20"
serde_json = "1.0.150"
