[package]
name = "recodingv2_API"
version = "0.1.0"
description = "A controlled environment for running timed coding and writing exercises with live anti-cheat monitoring."
edition = "2024"

[dependencies]
# Web Framework
actix-cors = "0.7.1"
actix-web = "4.13.0"

# Custom Crates
entity = { path = "../database/entity" }
migration = { path = "../database/migration" }

dotenvy = "0.15.7"
env_logger = "0.11.10"
sea-orm = "2.0.0-rc"
serde_json = "1.0.150"
